fixed review spacing

--- a/style.css
+++ b/style.css
@@ -198,6 +198,7 @@ footer a{
     min-height: 100%;
     display: flex;
     justify-content: space-between;
+    align-items: center;
     transition: 1s;
 }
 .slide{
